# proc-macro-workshop

./: Cargo.toml  main.rs
bitfield/tests/: progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 08-unrecognized-attribute.stderr  progress.rs
debug/tests/: progress.rs
seq/tests/: progress.rs
sorted/tests/: progress.rs
